# detris-watcher

./: .gitignore  Cargo.toml  Procfile  criterion.rs  cspell.json  rust-toolchain
src/: lib.rs  main.rs  server.rs
src/cli/: logging.rs  mod.rs  prometheus.rs  tokio_console.rs
src/ethereum/: auth.rs  block.rs  mod.rs
src/slack/: message.rs  mod.rs
