[package]
# Please adjust all these values, including the license
name = "detris-watcher"
version = "0.1.0"
authors = ["Ze Pedro Resende <j.p.resende68@gmail.com>"]
edition = "2021"
build = "build.rs"
repository = "https://github.com/ZePedroResende/detris-watcher"
description = "Watcher tool for the detris nft"
license-file = "mit-license.md"

[features]
default = []
bench = [ "criterion", "proptest" ]
tokio-console = [ "console-subscriber" ]

[[bin]]
name = "rust-app"
path = "src/main.rs"

[[bench]]
name = "criterion"
harness = false
path = "criterion.rs"
required-features = [ "bench", "proptest" ]

[dependencies]
color-eyre = "0.6"
console-subscriber = { version = "0.1", optional = true }
criterion = { version = "0.3.6", optional = true, features = [ "async_tokio" ] }
eyre = "0.6"
ethers = { git = "https://github.com/gakonst/ethers-rs", features=["ws", "openssl"] }
futures = "0.3"
hyper = { version = "0.14.20", features = [ "server", "tcp", "http1", "http2" ] }
itertools = "0.10"
mimalloc = { version = "0.1", default-features = false, optional = true }
once_cell = "1.13.0"
prometheus = { version = "0.13", features = [ "process" ] }
proptest = { version = "1.0", optional = true }
serde = "1.0"
serde_json = "1.0"
smallvec = { version = "^1.9.0", features = [ "serde" ] }
structopt = "0.3"
thiserror = "1.0"
tokio = { version = "1.19", features = [ "signal", "macros", "rt", "sync", "time", "rt-multi-thread" ] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = [ "env-filter", "json" ] }
url = "2.2"
users = "0.11"
slack-morphism = "0.40.0"
slack-morphism-models = "0.40.0"
slack-morphism-hyper="0.40"

[dev-dependencies]
pretty_assertions = "1.2.1"
proptest = { version = "1.0" }
tracing-test = "0.2"

[build-dependencies]
eyre = "0.6"
time = { version = "0.3.13", features = [ "formatting", "parsing" ] }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
overflow-checks = true
strip = true

# Compilation profile for any non-workspace member.
# Dependencies are optimized, even in a dev build. This improves dev performance
# while having neglible impact on incremental build times.
[profile.dev.package."*"]
opt-level = 3
